A lot of quiz marking fixes and styling improvements Added new logic for quiz questions with multiple inputs Added better colour contrast for Lush and Monochrome themes

--- a/static/lush.css
+++ b/static/lush.css
@@ -57,7 +57,7 @@ table, thead, tbody, th {
 }
 
 .navbar a {
-    color: #7dff61;
+    color: #e0ffd9;
 }
 
 .navbar a:hover {
@@ -67,7 +67,7 @@ table, thead, tbody, th {
 .dropbtn {
     font-family: "SF Mono";
     background-color: #186900;
-    color: #7dff61;
+    color: #e0ffd9;
     padding: 16px;
     font-size: 16px;
     border: none;
@@ -90,7 +90,7 @@ table, thead, tbody, th {
     font-family: "SF Mono";
     font-size: 1rem;
     background-color: #186900;
-    color: #7dff61;
+    color: #e0ffd9;
     border-style: none;
     padding: 12px 16px;
     display: block;
@@ -106,7 +106,7 @@ table, thead, tbody, th {
     text-decoration: none;
     font-size: 1rem;
     background-color: #186900;
-    color: #7dff61;
+    color: #e0ffd9;
     border-style: none;
     padding: 12px 16px;
     display: block;
@@ -154,7 +154,7 @@ table, thead, tbody, th {
     display: block;
     font-size: 1rem;
     font-family: ui-monospace;
-    background-color: #00b914;
+    background-color: #00d617;
     border-color: #1a9300;
     color: #deffd6;
     resize: none;
@@ -180,7 +180,7 @@ table, thead, tbody, th {
 .codeinput {
     font-size: 1rem;
     font-family: "SF Mono";
-    background-color: #1a9300;
+    background-color: #136b00;
     border-color: #1a9300;
     border-radius: 10px;
     color: #bcffad;
@@ -232,14 +232,14 @@ table, thead, tbody, th {
 
 .info {
     margin: 20px;
-    background-color: #00b914;
+    background-color: #00d617;
     padding: 20px;
     max-width: 800px;
 }
 
 .paddedinfo {
     margin: 20px;
-    background-color: #00b914;
+    background-color: #00d617;
     padding: 40px;
     max-width: 600px;
 }
@@ -287,7 +287,7 @@ table, thead, tbody, th {
     text-align: left;
     font-family: "SF Mono";
     border-radius: 10px;
-    color: #00b914;
+    color: #94ff9f;
     padding: 10px;
     tab-size: 4;
 }
@@ -298,13 +298,13 @@ table, thead, tbody, th {
     font-size: 1rem;
     font-family: "SF Mono";
     border-radius: 10px;
-    color: #00b914;
+    color: #94ff9f;
     padding: 10px;
     tab-size: 4;
 }
 
 .inlinelink a {
-    color: #00b914;
+    color: #00d617;
     text-decoration: none;
 }
 
@@ -391,7 +391,7 @@ table, thead, tbody, th {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #00b914;
+    background-color: #00d617;
     border-radius: 10px;
     margin: 10px;
 }
